--- a/Jungle-Academy/portfolio4-admin_design/css/index.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.css
@@ -234,6 +234,14 @@ section .table-wrap table tbody tr + tr {
   width: 32.85%;
 }
 
+.joing > .weather-today {
+  width: 19.35%;
+}
+
+.joing > .weather-weak {
+  width: 13.5%;
+}
+
 .joing .post {
   position: absolute;
   top: 0px;
@@ -406,36 +414,185 @@ section .table-wrap table tbody tr + tr {
   right: 0%;
 }
 
-.joing .weather {
+.joing .weather-today {
+  position: absolute;
+  top: 0%;
+  right: 13.5%;
+  height: 100%;
+  background: white;
+  font-size: 60px;
+  text-align: center;
+}
+
+.joing .weather-today em {
+  font-style: normal;
+}
+
+.joing .weather-today span, .joing .weather-today em {
+  display: block;
+}
+
+.joing .weather-today .inline {
+  display: inline;
+}
+
+.joing .weather-today h2 {
+  padding: 6%;
+  font-size: 17px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.joing .weather-today div:first-of-type {
+  color: #F36564;
+  font-size: 15px;
+}
+
+.joing .weather-today div:first-of-type span, .joing .weather-today div:first-of-type em {
+  margin-top: 10px;
+}
+
+.joing .weather-today div:first-of-type em {
+  font-size: 34px;
+}
+
+.joing .weather-today div:first-of-type span:first-child {
+  text-transform: capitalize;
+}
+
+.joing .weather-today div:first-of-type span:nth-child(3) {
+  font-size: 13px;
+}
+
+.joing .weather-today div:nth-of-type(2) {
+  position: relative;
+  height: 10%;
+  width: 70%;
+  margin: 10px auto;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.joing .weather-today div:nth-of-type(2) > span {
+  position: absolute;
+  top: 0%;
+  width: 30%;
+  height: 100%;
+  font-size: 13px;
+  font-weight: bold;
+  background-size: cover;
+}
+
+.joing .weather-today div:nth-of-type(2) > span:first-child {
+  left: 0%;
+}
+
+.joing .weather-today div:nth-of-type(2) > span:nth-child(2) {
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.joing .weather-today div:nth-of-type(2) > span:nth-child(3) {
+  right: 0%;
+}
+
+.joing .weather-today ul {
+  width: 95%;
+  height: 45%;
+  margin: 0 auto;
+  padding-top: 15px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.joing .weather-today ul li + li {
+  border-left: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.joing .weather-today ul li {
+  position: relative;
+  float: left;
+  width: 20%;
+  height: 100%;
+  font-size: 12px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.joing .weather-today ul li > span {
+  position: absolute;
+  height: 30%;
+}
+
+.joing .weather-today ul li > span:first-child {
+  top: 0%;
+  background: red;
+}
+
+.joing .weather-today ul li > em {
+  color: #F36564;
+}
+
+.joing .weather-weak {
   position: absolute;
   top: 0px;
   right: 0px;
   height: 100%;
-  background: white;
-  font-size: 60px;
+  padding: 2% 1%;
 }
 
-.desc .desc-content {
-  float: left;
-  width: 40%;
-}
-
-.desc .desc-content .table-wrap {
+.joing .weather-weak table {
   width: 100%;
-  margin: 0px;
-  padding: 20px;
-  background: white;
+  height: 100%;
 }
 
-.desc .desc-content p {
-  font-size: 30px;
-  margin-top: 10px;
-  background: white;
+.joing .weather-weak table tr {
+  height: 5%;
+  color: rgba(0, 0, 0, 0.7);
 }
 
-.desc ul {
-  float: right;
-  width: calc(60% - 10px);
-  background: red;
+.joing .weather-weak table tr span {
+  color: rgba(0, 0, 0, 0.7);
+  font-weight: normal;
+}
+
+.joing .weather-weak table tr td:first-child {
+  text-transform: capitalize;
+  font-weight: bold;
+  color: #1A1D23;
+  font-size: 12px;
+}
+
+.joing .weather-weak table tr .w-icon {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.joing .weather-weak table tr .w-icon span {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.joing .weather-weak table tr .w-deg {
+  text-align: right;
+  color: #F36564;
+  font-weight: bold;
+}
+
+.w-sunny {
+  background: url(../img/icon/weather/SVG/Sun.svg) no-repeat center/35px;
+}
+
+.w-rain {
+  background: url(../img/icon/weather/SVG/Cloud-Rain.svg) no-repeat center/35px;
+}
+
+.w-cloudy {
+  background: url(../img/icon/weather/SVG/Cloud.svg) no-repeat center/35px;
+}
+
+.w-partly-cloudy {
+  background: url(../img/icon/weather/SVG/Cloud-Sun.svg) no-repeat center/35px;
 }
 /*# sourceMappingURL=index.css.map */
